# gitlab-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.monkeycode/: MEMORY.md
.monkeycode/specs/mobile-web-optimization/: design.md  requirements.md
assets/: mobile-full.css
docker/: .env.example  Dockerfile-oneclick  Dockerfile-server  docker-compose-server.yml  docker-compose.yaml  entrypoint-server.sh  workhorse-wrapper
docs/: remaining-issues.md
gitlab-workhorse-rs/: Cargo.toml  README.md  build.rs
gitlab-workhorse-rs/docker/: Dockerfile-server  entrypoint-server.sh  init-hybrid  workhorse-wrapper
gitlab-workhorse-rs/proto/gitaly/: blob.proto  diff.proto  repository.proto  smarthttp.proto
gitlab-workhorse-rs/src/: main.rs  secret.rs  state.rs
gitlab-workhorse-rs/src/api/: gob_settings.rs  mod.rs
gitlab-workhorse-rs/src/badgateway/: mod.rs
gitlab-workhorse-rs/src/bodylimit/: mod.rs
gitlab-workhorse-rs/src/builds/: mod.rs
gitlab-workhorse-rs/src/cache/: mod.rs
gitlab-workhorse-rs/src/channel/: mod.rs
gitlab-workhorse-rs/src/correlation/: mod.rs
gitlab-workhorse-rs/src/dependencyproxy/: mod.rs
gitlab-workhorse-rs/src/download/: mod.rs
gitlab-workhorse-rs/src/forwardheaders/: mod.rs
gitlab-workhorse-rs/src/git/: mod.rs
gitlab-workhorse-rs/src/gitaly/: mod.rs  sidechannel.rs
gitlab-workhorse-rs/src/headers/: mod.rs
gitlab-workhorse-rs/src/loadshedding/: mod.rs
gitlab-workhorse-rs/src/lsif_transformer/: mod.rs
gitlab-workhorse-rs/src/orbit/: mod.rs
proto/gitaly/: diff.proto  repository.proto  smarthttp.proto
src/: compression.rs  device_detection.rs  html_injection.rs  lib.rs  main.rs  secret.rs  state.rs
src/api/: block.rs  channel_settings.rs
src/artifacts/: mod.rs
src/bodylimit/: mod.rs
src/cache/: mod.rs
src/config/: mod.rs
src/download/: mod.rs
src/error/: mod.rs
src/git/: mod.rs
src/gitaly/: mod.rs  sidechannel.rs
src/gob/: mod.rs
src/health/: mod.rs
src/imageresizer/: mod.rs
src/logging/: mod.rs
src/memory/: mod.rs
src/metrics/: mod.rs
src/oauthproxy/: mod.rs
src/proxy/: mod.rs
src/queueing/: mod.rs
src/ratelimit/: mod.rs
src/routes/: ci_long_polling.rs  import.rs  packages.rs  ssh_git.rs  uploads.rs  wiki.rs
src/senddata/: artifacts_entry.rs  git_injectors.rs  sendfile.rs
src/staticpages/: mod.rs
src/transport/: mod.rs
src/upload/: mod.rs
src/upstream/: notfoundunless.rs
src/zipartifacts/: mod.rs
(+23 files in other folders)
